Show proper location name in Delete location confirmation window and link open Edit Page

--- a/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
+++ b/code/dev/parts/domains/domain-waf-rules/domain-waf-rules.tpl.html
@@ -28,8 +28,9 @@
           </td>
           <td class="actions">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-            <div class="pull-right" <a href="" class="" ng-click="$ctrl.onViewWAFRule($event,item)" ng-if="!item.loading" uib-tooltip="View WAF Rule">
-              <i class="fa fa-eye"></i>
+            <div class="pull-right">
+              <a href="" class="" ng-click="$ctrl.onViewWAFRule($event,item)" ng-if="!item.loading" uib-tooltip="View WAF Rule">
+                <i class="fa fa-eye"></i>
               </a>
             </div>
           </td>
