--- a/code/dev/parts/domains/modals/confirmDeleteWAFLocation.tpl.html
+++ b/code/dev/parts/domains/modals/confirmDeleteWAFLocation.tpl.html
@@ -2,8 +2,7 @@
   <h3 class="modal-title">Confirm</h3>
 </div>
 <div class="modal-body">
-  Are you sure you want to delete WAF Location <strong>'{{model.loaction}}</strong>?
-
+  Are you sure you want to delete WAF Location<strong ng-if="!!model.location"> {{model.location}}</strong>?
 </div>
 <div class="modal-footer">
   <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
