Rename “Custom Rules” to “Customer Rules”

--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -108,8 +108,8 @@
         </div>
         <div class="panel-body">
           <uib-tabset active="active" class="waf-rules__tabs">
-            <uib-tab index="1" heading="Custom Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
-              <div id="waf-rules-list__custom" ng-include="'parts/waf_rules/view/waf-rules-list__custom.tpl.html'"></div>
+            <uib-tab index="1" heading="Customer Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+              <div id="waf-rules-list__custom" ng-include="'parts/waf_rules/view/waf-rules-list__customer.tpl.html'"></div>
             </uib-tab>
             <uib-tab index="2" heading="Built-In Rules" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
               <div id="waf-rules-list__builtin" ng-include="'parts/waf_rules/view/waf-rules-list__builtin.tpl.html'"></div>
