--- a/code/dev/parts/waf_rules/list.html
+++ b/code/dev/parts/waf_rules/list.html
@@ -80,9 +80,9 @@
             <div class="col-md-12">
               <div class="pull-left form-inline">
                 <div class="form-group">
-                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()"
+                  <a ui-sref="{{isReadOnly() ?'.': '.new'}}" class="btn btn-success" id="btn_add_new_waf_rule" ng-class="{'btn-disabled':isReadOnly()}" ng-disabled="_loading || isReadOnly()"
                     popover-append-to-body="{{false}}" popover-trigger="mouseenter" uib-popover="Click to add a new WAF rule. Later the rule can be used in WAF settings of your web domains.">
-                    <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New Custom WAF Rule
+                    <i class="glyphicon glyphicon-plus"></i>&nbsp; Add New WAF Rule
                   </a>
                 </div>
                 <div class="form-group">
