Create block WAF Rules in All Account Resource Page

--- a/code/dev/parts/companies/account-resources.html
+++ b/code/dev/parts/companies/account-resources.html
@@ -789,6 +789,8 @@
               <crud-pagination></crud-pagination>
             </div>
           </section>
+          <!--  ==== WAF Rules ==================================================== -->
+          <section ng-controller="WAFRulesCrudController" class="row accountresources--wafrules" ng-include="'parts/companies/account-resources/account-resources-wafrules.tpl.html'"></section>
         </div>
       </div>
     </div>
