--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -153,10 +153,10 @@
           </div>
           <hr>
           <div class="form-group" ng-class="{'has-error': createForm.password.$invalid && createForm.password.$dirty}">
-            <label for="userPassword" class="col-sm-2 control-label">Password *</label>
+            <label for="password" class="col-sm-2 control-label">Password *</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control inline-block" id="password" name="userPassword" ng-model="model.password" ng-disabled="_loading" ng-minlength="8" ng-maxlength="15" required>
-              <label for="userPassword" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Enter the new user's password">
+              <input type="password" class="form-control inline-block" id="password" name="password" ng-model="model.password" ng-disabled="_loading" ng-minlength="8"  ng-maxlength="15" required>
+              <label for="password" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Enter the new user's password">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.password.$error" role="alert" ng-messages-multiple>
@@ -167,10 +167,10 @@
             </div>
           </div>
           <div class="form-group" ng-class="{'has-error': createForm.passwordConfirm.$invalid && createForm.passwordConfirm.$dirty}">
-            <label for="userPasswordConfirm" class="col-sm-2 control-label">Confirm Password *</label>
+            <label for="passwordConfirm" class="col-sm-2 control-label">Confirm Password *</label>
             <div class="col-sm-10">
-              <input type="password" class="form-control inline-block" id="passwordConfirm" name="userPasswordConfirm" ng-model="model.passwordConfirm" ng-disabled="_loading" validate-compare-to="model.password">
-              <label for="userPasswordConfirm" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Re-enter the new user's password">
+              <input type="password" class="form-control inline-block" id="passwordConfirm" name="passwordConfirm" ng-model="model.passwordConfirm" ng-disabled="_loading" validate-compare-to="model.password">
+              <label for="passwordConfirm" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Re-enter the new user's password">
                 <i class="fa fa-question-circle"></i>
               </label>
               <div class="error-messages" ng-messages="createForm.passwordConfirm.$error" role="alert" ng-messages-multiple>
