Fixed URL field text in third-party page Dashboard widget

--- a/code/dev/parts/dashboard/widgets/third-party-iframe/edit-third-party-iframe.html
+++ b/code/dev/parts/dashboard/widgets/third-party-iframe/edit-third-party-iframe.html
@@ -1,6 +1,6 @@
 <form role=form>
   <div class="form-group">
-    <label for="domain">Curl Parameters To Fetch The Page</label>
+    <label for="domain">Web Page To Load</label>
   </div>
   <div class="form-group">
     <input ng-model="config.url" class="form-control">
