--- a/code/dev/parts/reports/charts/mobile-top-objects-time.html
+++ b/code/dev/parts/reports/charts/mobile-top-objects-time.html
@@ -40,7 +40,7 @@
         <tbody>
         <tr ng-repeat="item in items">
           <td>
-            <a target="_blank" ng-href="{{item.key}}">{{item.key}}</a>
+            <a target="_blank" class="description-link" ng-href="{{item.key}}">{{item.key}}</a>
           </td>
           <td class="text-right">{{item.val}}</td>
           <td class="text-right">{{item.count}}</td>
