Update Usage Report - delete "Total" info, format number "DNS Queries"

--- a/code/dev/parts/reports/usage-web/usage-web__dns_usage.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__dns_usage.tpl.html
@@ -17,7 +17,7 @@
       <td>
        {{usage.dns_records}}
       </td>
-      <td>{{usage.dns_queries}}</td>
+      <td>{{formatNumber(usage.dns_queries)}}</td>
 
     </tr>
 
