--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -81,36 +81,11 @@
             <div class="col-md-4 usage-web__block_domains" ng-include="'parts/reports/usage-web/usage-web__domains.tpl.html'">
             </div>
             <!-- Section with data SSL Certificates-->
-            <div class="col-md-4" id="ssl_certs__container">
-
-              <h4>SSL Certs</h4>
-
-              <form class="form-horizontal">
-
-                <div class="form-group">
-                  <label class="col-sm-6 control-label" >Active</label>
-                  <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.ssl_certs.active }}</div>
-                  </div>
+            <div class="col-md-4">
+                <div id="ssl_certs__view_container" ng-include="'parts/reports/usage-web/usage-web__ssl_certs.tpl.html'">
                 </div>
-
-                <div class="form-group">
-                  <label class="col-sm-6 control-label" >Deleted</label>
-                  <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.ssl_certs.deleted }}</div>
-                  </div>
+                <div id="ssl_names__view_container" ng-include="'parts/reports/usage-web/usage-web__ssl_names.tpl.html'">
                 </div>
-
-                <div class="form-group">
-                  <label class="col-sm-6 control-label">Total</label>
-                  <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.ssl_certs.total }}</div>
-                  </div>
-                </div>
-
-              </form>
-               <div  class="usage-web__ssl_names" ng-include="'parts/reports/usage-web/usage-web__ssl_names.tpl.html'">
-               </div>
             </div>
 
             <div class="col-md-4">
@@ -130,13 +105,6 @@
                   <label class="col-sm-6 control-label" >Inactive</label>
                   <div class="col-sm-6">
                     <div class="form-control text-right">{{ report.api_keys.inactive }}</div>
-                  </div>
-                </div>
-
-                <div class="form-group">
-                  <label class="col-sm-6 control-label">Total</label>
-                  <div class="col-sm-6">
-                    <div class="form-control text-right">{{ report.api_keys.total }}</div>
                   </div>
                 </div>
 
@@ -176,13 +144,6 @@
                     <td>{{report.apps_per_platform['Android'].deleted}}</td>
                     <td>{{report.apps_per_platform['iOS'].deleted}}</td>
                     <td>{{report.apps_per_platform['Windows_Mobile'].deleted}}</td>
-                  </tr>
-                  <tr>
-                    <td>Total</td>
-                    <td>{{report.applications.total}}</td>
-                    <td>{{report.apps_per_platform['Android'].total}}</td>
-                    <td>{{report.apps_per_platform['iOS'].total}}</td>
-                    <td>{{report.apps_per_platform['Windows_Mobile'].total}}</td>
                   </tr>
                 </tbody>
               </table>
