Add smoke test for Usage Report (DNS Service)

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -115,8 +115,8 @@
           </div>
           <hr>
           <!-- DNS Service-->
-          <div class="row usage-web__dns_service_block">
-            <div class="col-md-4" ng-include="'parts/reports/usage-web/usage-web__dns_service.tpl.html'"></div>
+          <div class="row">
+            <div id="dns_service__view_container" class="col-md-4" ng-include="'parts/reports/usage-web/usage-web__dns_service.tpl.html'"></div>
           </div>
           <!-- New version display Mobile Apps data-->
           <div class="row" id="apps__view_container">
