Add report block "Log Shipping Job" and smoke test

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -80,11 +80,15 @@
             <!-- Block Domains -->
             <div class="col-md-4 usage-web__block_domains" ng-include="'parts/reports/usage-web/usage-web__domains.tpl.html'">
             </div>
-            <!-- Section with data SSL Certificates-->
             <div class="col-md-4">
+                <!-- Section with data SSL Certificates-->
                 <div id="ssl_certs__view_container" ng-include="'parts/reports/usage-web/usage-web__ssl_certs.tpl.html'">
                 </div>
+                 <!-- Section with data SSL Names-->
                 <div id="ssl_names__view_container" ng-include="'parts/reports/usage-web/usage-web__ssl_names.tpl.html'">
+                </div>
+                <!-- Section with data Log Shipping Jobs-->
+                <div id="log_shipping_jobs__view_container" ng-include="'parts/reports/usage-web/usage-web__log_shipping_jobs.tpl.html'">
                 </div>
             </div>
 
