Updates for  Usage Report

--- a/code/dev/parts/reports/usage-web/usage-web__domains.tpl.html
+++ b/code/dev/parts/reports/usage-web/usage-web__domains.tpl.html
@@ -31,14 +31,14 @@
   </div>
 
   <div class="form-group">
-    <label class="col-sm-6 control-label">Enhanced Analytics</label>
+    <label class="col-sm-6 control-label">Enhanced Analytics Enabled</label>
     <div class="col-sm-6">
       <div class="form-control text-right">{{ report.domains.total_enhanced_web_analytics}}</div>
     </div>
   </div>
 
   <div class="form-group">
-    <label class="col-sm-6 control-label">WAF</label>
+    <label class="col-sm-6 control-label">WAF Enabled</label>
     <div class="col-sm-6">
       <div class="form-control text-right">{{ report.domains.total_waf_feature}}</div>
     </div>
