--- a/code/dev/parts/waf_rules/new.html
+++ b/code/dev/parts/waf_rules/new.html
@@ -71,7 +71,7 @@
           <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': createForm.rule_type.$invalid && createForm.rule_type.$dirty }">
             <label for="rule_type" class="col-sm-2 control-label">WAF Rule Type</label>
             <div class="col-sm-10">
-              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_type" id="rule_type" name="rule_type"
+              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.rule_type" id="ruleType" name="rule_type"
                 ng-options="obj.id as obj.typeName for obj in rule_types" required>
                 <option value="">--- Select WAF Rule Type ---</option>
               </select>
@@ -87,7 +87,7 @@
           <div class="form-group" ng-if="auth.isRevadmin()" ng-class="{ 'has-error': createForm.visibility.$invalid && createForm.visibility.$dirty }">
             <label for="rule_type" class="col-sm-2 control-label">WAF Rule Visibility</label>
             <div class="col-sm-10">
-              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.visibility" id="rule_type" name="ruleType"
+              <select class="form-control inline-block" ng-disabled="_loading" ng-model="model.visibility" id="typeVisibility" name="visibility"
                 ng-options="obj.id as obj.typeName for obj in visibility_types" required>
                 <option value="">--- Select WAF Rule Visibility ---</option>
               </select>
@@ -106,7 +106,7 @@
               WAF Rule Statements *</label>
             <div class="col-md-10">
               <div class="col-sm-12 form-group">
-                <textarea id="rule_body" placeholder="WAF Rule Statements" class="form-control text--courier inline-block" name="rule_body"
+                <textarea id="ruleStatements" placeholder="WAF Rule Statements" class="form-control text--courier inline-block" name="rule_body"
                   ng-model="model.rule_body" ng-disabled="_loading" ng-maxlength="10000" required>
                 </textarea>
                 <label for="rule_body" class="text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
